--- a/i18n/ko/messages.ko.xlf
+++ b/i18n/ko/messages.ko.xlf
@@ -2678,9 +2678,9 @@
           <context context-type="linenumber">67</context>
         </context-group>
       </trans-unit>
-      <trans-unit id="7003098da97db80a0761fe9fdadb2f0349eb462c" datatype="html">
-        <source>Logged in with auth header</source>
-        <target state="new">인증 헤더로 로그인됨</target>
+      <trans-unit id="f81e5637dda2cdd155195ce8c7c790406c581d52" datatype="html">
+        <source>Logged in with auth header<x id="LINE_BREAK" ctype="lb" equiv-text="&lt;br/>"/><x id="START_LINK" ctype="x-a" equiv-text="&lt;a>"/>Logout<x id="CLOSE_LINK" ctype="x-a" equiv-text="&lt;/a>"/></source>
+        <target state="new">Logged in with auth header<x id="LINE_BREAK" ctype="lb" equiv-text="&lt;br/>"/><x id="START_LINK" ctype="x-a" equiv-text="&lt;a>"/>Logout<x id="CLOSE_LINK" ctype="x-a" equiv-text="&lt;/a>"/></target>
         <context-group purpose="location">
           <context context-type="sourcefile">../src/app/frontend/chrome/userpanel/template.html</context>
           <context context-type="linenumber">22</context>
@@ -3321,6 +3321,7 @@
         <target state="new">
         <x id="START_ITALIC_TEXT" ctype="x-i" equiv-text="&lt;i>"/>open_in_new<x id="CLOSE_ITALIC_TEXT" ctype="x-i" equiv-text="&lt;/i>"/>
       </target> 더 배우기
+        
         <context-group purpose="location">
           <context context-type="sourcefile">../src/app/frontend/create/from/form/template.html</context>
           <context context-type="linenumber">54</context>
